Fix some layout issues

--- a/src/sass/_carousel.scss
+++ b/src/sass/_carousel.scss
@@ -1,35 +1,36 @@
 .carousel {
-  width: 100%;
-  margin: 0 auto;
   position: relative;
+  width: 100%;
+  padding: 0;
+  margin: 0 auto;
   overflow: hidden;
   list-style: none;
-  padding: 0;
   z-index: 1;
 }
 
 .carousel__container {
   position: relative;
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 100%;
-  z-index: 1;
-  display: flex;
   transform: translate3d(0,0,0);
   transition: transform 500ms ease-in-out;
+  z-index: 1;
 }
 
 .carousel__slide {
+  position: relative;
   flex-shrink: 0;
   width: 100%;
   height: 100%;
-  position: relative;
 }
 
 .carousel__pagination {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 15px 0;
+  margin-top: 15px;
 }
 
 .carousel__pagination__item {
