--- a/src/sass/_sections.scss
+++ b/src/sass/_sections.scss
@@ -203,7 +203,6 @@
   text-align: center;
 
   blockquote {
-    padding: 0 30px;
 
     p {
       font-size: 24px;
